# pccheck

./: .gitignore  main.py  pccheck.spec  pyproject.toml  report.py
.github/workflows/: build-exe.yml  lint-format.yml
checks/: __init__.py  base.py
checks/categories/: __init__.py
checks/categories/audio/: __init__.py  _helpers.py  exclusive_mode.py  sample_rate.py  spatial_audio.py
checks/categories/cpu/: __init__.py  _helpers.py  core_isolation.py  core_parking.py  cpu_boost.py  cpu_cstates.py  hyperthreading.py  memory_channels.py  vbs_hvci.py  xmp_docp.py
checks/categories/display/: __init__.py  _helpers.py  hdr.py  multiple_monitors.py  refresh_rate.py  vrr.py
checks/categories/gpu/: __init__.py  _helpers.py  hags.py  pcie_width.py  rebar.py  shader_cache.py  thermal_throttling.py  whisper_mode_chill.py
checks/categories/network/: __init__.py  _helpers.py  interrupt_moderation.py  nagle_algorithm.py  nic_power_saving.py  rss.py
checks/categories/os/: __init__.py  _helpers.py  cpu_min_state.py  fullscreen_optimizations.py  game_mode.py  power_plan.py  sysmain.py  timer_resolution.py  transparency_effects.py  windows_version.py  xbox_game_bar_dvr.py
checks/categories/peripherals/: __init__.py  _helpers.py  mouse_polling_rate.py  usb_controller_load.py
checks/categories/storage/: __init__.py  _helpers.py  game_drive_type.py  interface_type.py  smart_health.py  write_caching.py
