[project]
name = "pccheck"
version = "0.1.0"
description = "PC Gaming Performance Analyzer"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.0.0",
  "psutil>=5.9.0",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.0",
  "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
ignore = [
  "E501",
  "F403",
  "F405",
]
